src/main/webapp/imcms/css/image_editor/imcms-image_editor.css
.common-info-image {
    width: 50%;
    padding-left: 95px;
    min-width: 350px;
}

.image-editor-info {
    width: 45%;
    margin-right: 5%;
    display: inline-flex;
    text-transform: lowercase;
    justify-content: flex-end;
}

.image-editor-info__data-link{
    max-width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
}

.imcms-image_editor {
    background-color: #f3f3fc;
    display: block;
    width: 100%;
    height: 100%;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: auto;
}

.imcms-image_editor__image-characteristics {
    display: flex;
    border-bottom: 1px solid #d3d8de;
    padding: 0;
    height: 64px;
}

.imcms-image_editor__image-characteristics:after {
    content: "";
    display: block;
    clear: both;
}

.imcms-image_editor__left-side {
    float: left;
    position: relative;
    width: 74%;
    height: 88%;
    height: -webkit-calc(100% - 106px);
    height: -moz-calc(100% - 106px);
    height: -o-calc(100% - 106px);
    height: calc(100% - 106px);
}

.imcms-image_editor__right-side {
    display: inline-block;
    position: relative;
    width: 26%;
    height: 88%;
    height: -webkit-calc(100% - 110px);
    height: -moz-calc(100% - 110px);
    height: -o-calc(100% - 110px);
    height: calc(100% - 110px);
    overflow: auto;
}

.imcms-image_editor__footer {
    border-top: 1px solid #d3d8de;
    border-left: 1px solid #d3d8de;
    display: block;
    width: 100%;
    padding-top: 15px;
    text-align: center;
}

.imcms-image_editor__footer button {
    position: inherit;
    display: inline-block;
    padding-left: 10px;
    padding-right: 10px;
    margin: 5px;
    width: 45%;
    max-width: 150px;
}

.image-exif-window {
    z-index: 10004;
}

.image-exif-window .imcms-pop-up-modal__body {
    overflow-y: auto;
    height: 95%;
    background-color: #f3f3fc;
}

.imcms-pop-up-modal__body .image-exif-window__row {
    padding: 6px 15px;
}

.image-exif-window + .imcms-modal-layout{
    z-index: 10003;
}

.imcms-originally-img-area__img {
    overflow: hidden;
}

.imcms-image-info {
    background-color: #2fcccf;
}

#data-link-image {
    color: #fff2f9;
}

.imcms-control--permalink {
    margin-top: 14px;
}

.imcms-display-size.imcms-image-size-control__display-size {
    display: none;
}

